--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,6 @@ a:hover {
 
 body {
   margin: 0;
-  /*  display: flex; */
-  /* place-items: center; */
-  /* min-width: 320px; */
-  /* min-height: 100vh; */
 }
 
 h1 {
@@ -37,15 +33,13 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  background-color: hwb(0 10% 90% / 0);
+  padding: 0m 0em;
+  cursor: pointer;
+  border: 0px solid transparent;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
 }
 button:hover {
   border-color: #646cff;
@@ -66,4 +60,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+button:focus, button:focus-visible {
+  outline: 0px auto;
 }
